# vet-rescue

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
data/tmx/: main.tmx
data/tsx/: moder_exteriors_city_props_objects.tsx  moder_interiors_room_borders.tsx  modern_city_outdoors.tsx  modern_exteriors_city_props.tsx  modern_exteriors_fences_objects.tsx  modern_exteriors_terrains_and_fences.tsx  modern_exteriors_villas_objects.tsx  modern_interiors_floor_shadows.tsx  modern_interiors_floors.tsx  modern_interiors_hospital_objects.tsx  modern_interiors_walls.tsx  player_64.tsx  player_mask.tsx
src/: camera_group.py  game.py  main.py  world.py
src/engine/: controlled_sprite.py
src/helpers/: assets.py  folders.py
src/settings/: app_settings.py  game_settings.py  screen_settings.py
src/sprites/: base_sprite.py  groups.py  surfaces.py
src/sprites/maps/: main.py
src/sprites/player/: player.py
