[tool.poetry]
name = "vet-rescue"
version = "0.1.0"
description = "Vet Rescue game"
authors = ["Gabriel Santos <gabrielrsantoss@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.3"
PyTMX = "^3.31"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
isort = "^5.12.0"
black = "^23.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
atomic = true
case_sensitive = true
filter_files = true
import_heading_firstparty = "Internal imports"
import_heading_stdlib = "Python imports"
import_heading_thirdparty = "Pip imports"
known_startup = [
  "startup",
]
line_length = 120
lines_after_imports = 2
profile = "black"
py_version = "auto"
remove_redundant_aliases = true
sections = [
  "FUTURE",
  "STARTUP",
  "STDLIB",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER",
]
